@@ -52,61 +52,6 @@ __Choices: RAID0, RAID1, RAID5, Cancel
 _Description: Multidisk device type:
  Please choose the type of the multidisk device to be created.
 
-Template: mdcfg/raid1devcount
-Type: string
-# :sl3:
-_Description: Number of active devices for the RAID1 array:
- The RAID1 array will consist of both active and spare partitions. The active
- partitions are those used, while the spare devices will only be used if one or
- more of the active devices fail.
- .
- NOTE: this setting cannot be changed later.
-
-Template: mdcfg/raid1sparecount
-Type: string
-# :sl3:
-_Description: Number of spare devices for the RAID1 array:
-
-Template: mdcfg/raid1sparedevs
-Type: multiselect
-Choices: ${PARTITIONS}
-# :sl3:
-_Description: Spare devices for the RAID1 multidisk device:
- You have chosen to create an RAID1 array with ${COUNT} spare devices.
- .
- Please choose which partitions will be used as spare devices.
- You may choose up to ${COUNT} partitions. If you choose less than ${COUNT}
- devices, the remaining partitions will be added to the array as "missing".
- You will be able to add them later to the array.
-
-Template: mdcfg/raid5devcount
-Type: string
-# :sl3:
-_Description: Number of active devices for the RAID5 array:
- The RAID5 array will consist of both active and spare partitions. The active
- partitions are those used, while the spare devices will only be used if one or
- more of the active devices fail. A minimum of three active devices is
- required.
- .
- NOTE: this setting cannot be changed later.
-
-Template: mdcfg/raid5sparecount
-Type: string
-# :sl3:
-_Description: Number of spare devices for the RAID5 array:
-
-Template: mdcfg/raid5sparedevs
-Type: multiselect
-Choices: ${PARTITIONS}
-# :sl3:
-_Description: Spare devices for the RAID5 multidisk device:
- You have chosen to create an RAID5 array with ${COUNT} spare devices.
- .
- Please choose which partitions will be used as spare devices.
- You may choose up to ${COUNT} partitions. If you choose less than ${COUNT}
- devices, the remaining partitions will be added to the array as "missing".
- You will be able to add them later to the array.
-
 Template: mdcfg/raid0devs
 Type: multiselect
 Choices: ${PARTITIONS}
@@ -115,25 +60,43 @@ _Description: Active devices for the RAID0 multidisk device:
  You have chosen to create a RAID0 array. Please choose the active devices
  in this array.
 
-Template: mdcfg/raid1devs
+Template: mdcfg/raiddevcount
+Type: string
+# :sl3:
+_Description: Number of active devices for the RAID${LEVEL} array:
+ The RAID${LEVEL} array will consist of both active and spare partitions. The active
+ partitions are those used, while the spare devices will only be used if one or
+ more of the active devices fail. A minimum of ${MINIMUM} active devices is
+ required.
+ .
+ NOTE: this setting cannot be changed later.
+
+Template: mdcfg/raiddevs
 Type: multiselect
 Choices: ${PARTITIONS}
 # :sl3:
-_Description: Active devices for the RAID1 multidisk device:
- You have chosen to create an RAID1 array with ${COUNT} active devices.
+_Description: Active devices for the RAID${LEVEL} multidisk device:
+ You have chosen to create a RAID${LEVEL} array with ${COUNT} active devices.
  .
  Please choose which partitions are active devices.
  You must select exactly ${COUNT} partitions.
 
-Template: mdcfg/raid5devs
+Template: mdcfg/raidsparecount
+Type: string
+# :sl3:
+_Description: Number of spare devices for the RAID${LEVEL} array:
+
+Template: mdcfg/raidsparedevs
 Type: multiselect
 Choices: ${PARTITIONS}
 # :sl3:
-_Description: Active devices for the RAID5 multidisk device:
- You have chosen to create an RAID5 array with ${COUNT} active devices.
+_Description: Spare devices for the RAID${LEVEL} multidisk device:
+ You have chosen to create a RAID${LEVEL} array with ${COUNT} spare devices.
  .
- Please choose which partitions are active devices.
- You must select exactly ${COUNT} partitions.
+ Please choose which partitions will be used as spare devices.
+ You may choose up to ${COUNT} partitions. If you choose less than ${COUNT}
+ devices, the remaining partitions will be added to the array as "missing".
+ You will be able to add them later to the array.
 
 Template: mdcfg/deletemenu
 Type: select
