@@ -7,6 +7,8 @@ mdcfg (1.27) UNRELEASED; urgency=low
   * Factorize md_create_raid1() and md_create_raid5() into md_create_array()
     which first parameter is the RAID level.
     Patch from Ryan Niebur.
+  * Factorize debconf templates for RAID 1 and RAID 5.
+    Patch from Ryan Niebur.
 
  -- Jérémy Bobbio <lunar@debian.org>  Thu, 29 May 2008 17:46:31 +0000
 
